crates/mu-ui/src/snapshots/mu_ui__snapshot_tests__empty_ui.snap
---
source: src/snapshot_tests.rs
expression: "render(&mut session.app, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"› Type a message…                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"~/Projects/mu (main)                                                            "
"↑0 ↓0                                            (opencode-go) deepseek-v4-flash"
