crates/mu-ui/src/snapshots/mu_ui__snapshot_tests__long_single_message_wraps.snap
---
source: src/snapshot_tests.rs
expression: "render(&mut session.app, 60, 24)"
---
"word word word word word word word word word word word word "
"word word word word word word word word word word word word "
"word word word word word word word word word word word word "
"word word word word word word word word word word word word "
"word word word word word word word word word word word word "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"────────────────────────────────────────────────────────────"
"› Type a message…                                           "
"────────────────────────────────────────────────────────────"
"~/Projects/mu (main)                                        "
"↑900 ↓500                    (opencode-go) deepseek-v4-flash"
