crates/mu-ui/src/snapshots/mu_ui__snapshot_tests__seeded_conversation.snap
---
source: src/snapshot_tests.rs
expression: "render(&mut session.app, 80, 24)"
---
"set up a new crate                                                              "
"                                                                                "
"Created the `mu-ui` crate and wired the channel API. Here is the manifest:      "
"                                                                                "
"```toml                                                                         "
"[package]                                                                       "
"name = "mu-ui"                                                                  "
"edition = "2024"                                                                "
"```                                                                             "
"                                                                                "
"how does scrolling work?                                                        "
"                                                                                "
"Scrolling uses a flattened-line offset model. Each history item reports its     "
"wrapped height via `Paragraph::line_count`, cached per item and invalidated only"
"on width change; only the items intersecting the visible window are drawn.      "
"                                                                                "
"The footer shows the cwd, branch, model, and cumulative token usage, refreshed  "
"on turn start and prompt submit rather than per frame.                          "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"› Type a message…                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"~/Projects/mu (main)                                                            "
"↑3.6k ↓2.0k                                      (opencode-go) deepseek-v4-flash"
