crates/mu-ui/src/snapshots/mu_ui__snapshot_tests__streamed_message_deltas.snap
---
source: src/snapshot_tests.rs
expression: "render(&mut session.app, 80, 24)"
---
"One two three.                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"› Type a message…                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"~/Projects/mu (main)                                                            "
"↑0 ↓0                                            (opencode-go) deepseek-v4-flash"
